--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,5 +1,12 @@
 @import "visually-hidden";
 @import "container";
 @import "header";
-
+@import "hero";
+@import "product";
+@import "info";
+@import "process";
+@import "strategy";
+@import "price";
+@import "client";
+@import "business";
 @import "footer";
