--- a/scss/_generals.scss
+++ b/scss/_generals.scss
@@ -13,6 +13,8 @@ html {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: "Poppins", "Arial", sans-serif;
+    // background-color: #E5E5E5;
     
   }
   
