--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,6 @@
-$bobur-green:green;
-$jonibek-gray:gray;
-$header-bg-color:#F3D7B7;
-$sections-bg-color: #C99B67;
+$green:#02897A;
+$blue:#4D8DFF;
+$purple:#740A76;
+$black: #22343D;
+$white:#FFFFFF;
+$light-red:#F03E3D;
