--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -29,16 +29,16 @@
 .socials {
 }
 
-.social__instagram {
+.socials__instagram {
     text-decoration: none;
 }
 
-.social__facebook {
+.socials__facebook {
     margin: 0 16px;
     text-decoration: none;
 }
 
-.social__twitter {
+.socials__twitter {
     text-decoration: none;
 }
 
