--- a/scss/blocks/_info.scss
+++ b/scss/blocks/_info.scss
@@ -100,7 +100,7 @@
     margin-left: 94px;
 }
 
-.cutomer__check {
+.customer__check {
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
