--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -10,3 +10,16 @@
 @import "client";
 @import "business";
 @import "footer";
+
+
+@import "about-price";
+@import "custom";
+@import "effect";
+@import "quation";
+
+
+
+@import "customer-hero";
+@import "customer-product";
+@import "work";
+@import "affers";
