--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -125,6 +125,8 @@
 }
 .energy__input {
     display: inline-block;
+    width: 100%;
+    max-width: 325px;
     background: #FFFFFF;
     border: 1px solid #BCD0E5;
     border-radius: 4px;
