--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -17,9 +17,11 @@
 @import "effect";
 @import "quation";
 
-
-
 @import "customer-hero";
 @import "customer-product";
 @import "work";
 @import "affers";
+
+@import "resource";
+@import "stories";
+@import "location";
