--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -31,15 +31,18 @@
 
 .socials__instagram {
     text-decoration: none;
+    display: inline-block;
 }
 
 .socials__facebook {
-    margin: 0 16px;
+    margin: 0 11px;
     text-decoration: none;
+    display: inline-block;
 }
 
 .socials__twitter {
     text-decoration: none;
+    display: inline-block;
 }
 
 
